force-app/main/default/objects/Contract_Line_Item__c/Contract_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Provides the list of all the Assets related to a single Contract</description>
    <label>Contract Line Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>