force-app/main/default/objects/Contract_Line_Item__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <label>Asset Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Hardware</value>
        </filterItems>
        <filterItems>
            <field>Asset__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Hardware</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Software</value>
        </filterItems>
        <filterItems>
            <field>Asset__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Software</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Professional Services</value>
        </filterItems>
        <filterItems>
            <field>Asset__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Professional Services</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>Contract_Line_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>