force-app/main/default/objects/Contract_Line_Item__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Asset Type</label>
    <type>Text</type>
</CustomField>