force-app/main/default/objects/Contract_Line_Item__c/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <description>Master detail relationship to Contract object get the contract name</description>
    <label>Contract Name</label>
    <referenceTo>Contract_Agreement__c</referenceTo>
    <relationshipLabel>Contract Line Items</relationshipLabel>
    <relationshipName>Contract_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>