force-app/main/default/objects/Contract_Line_Item__c/fields/Cost_per_hardware__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_hardware__c</fullName>
    <label>Cost per Hardware</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>