force-app/main/default/objects/Contract_Line_Item__c/fields/Cost_Per_License__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_License__c</fullName>
    <label>Cost Per License</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>