force-app/main/default/objects/Contract_Line_Item__c/fields/Cost_Per_Resource__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Resource__c</fullName>
    <label>Cost Per Resource</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>