force-app/main/default/objects/Contract_Line_Item__c/fields/Cost_per_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Transaction__c</fullName>
    <label>Cost per Transaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>