force-app/main/default/objects/Contract_Line_Item__c/fields/Hourly_Cost_of_Usage__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Cost_of_Usage__c</fullName>
    <label>Hourly Cost of Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>