force-app/main/default/objects/Contract_Line_Item__c/fields/Hourly_Usage_per_GB__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Usage_per_GB__c</fullName>
    <label>Hourly Usage (per GB)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>