force-app/main/default/objects/Contract_Line_Item__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per User License</fullName>
            </value>
            <value>
                <fullName>Per Device License</fullName>
            </value>
            <value>
                <fullName>Subscription-Based License</fullName>
            </value>
            <value>
                <fullName>Perpetual license</fullName>
            </value>
            <value>
                <fullName>Tiered license</fullName>
            </value>
            <value>
                <fullName>Usage-Based License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>