force-app/main/default/objects/Contract_Line_Item__c/fields/Number_of_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Transactions__c</fullName>
    <label>Number of Transactions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>