force-app/main/default/objects/Contract_Line_Item__c/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <formula>(TEXT(Contract_Name__r.Asset_Ownership_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ownership Type</label>
    <type>Text</type>
</CustomField>