force-app/main/default/objects/Contract_Line_Item__c/fields/Running_Cost__c.field-meta.xml
<CustomField>
    <fullName>Running_Cost__c</fullName>
    <formula>(Number_of_Transactions__c  *  Cost_per_Transaction__c)  +  ( Hourly_Usage_per_GB__c    *    Hourly_Cost_of_Usage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Running Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>