force-app/main/default/objects/Contract_Line_Item__c/fields/Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets__c</fullName>
    <description>Total number of assets present</description>
    <label>Total Assets</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>