force-app/main/default/objects/Contract_Line_Item__c/fields/Total_Hardware_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Hardware_Cost__c</fullName>
    <formula>Cost_per_hardware__c * Total_Assets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hardware Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>