force-app/main/default/objects/Contract_Line_Item__c/fields/Total_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Licenses__c</fullName>
    <label>Total Licenses</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>