force-app/main/default/objects/Contract_Line_Item__c/fields/Total_PS_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_PS_Cost__c</fullName>
    <formula>Cost_Per_Resource__c  *  Total_Resources__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total PS Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>