force-app/main/default/objects/Contract_Line_Item__c/fields/Total_Software_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Software_Cost__c</fullName>
    <formula>IF( ISPICKVAL( License_Type__c , &apos;Usage-Based License&apos;) , ((Total_Licenses__c  *  Cost_Per_License__c)+ Running_Cost__c ), (Total_Licenses__c  *  Cost_Per_License__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>It is the sum of Total License Cost and Running Cost.</inlineHelpText>
    <label>Total Software Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>