force-app/main/default/objects/Contract_Line_Item__c/fields/Unique_Asset_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Asset_Contract_Id__c</fullName>
    <label>Unique Asset Contract Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>