force-app/main/default/objects/Contract_Line_Item__c/recordTypes/Professional_Services.recordType-meta.xml
<RecordType>
    <fullName>Professional_Services</fullName>
    <active>true</active>
    <label>Professional Services</label>
</RecordType>