force-app/main/default/objects/Contract_Line_Item__c/validationRules/Cost_Per_License_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Cost_Per_License_Rule</fullName>
    <active>true</active>
    <description>Rule for Cost Per License field value to be greater than 0</description>
    <errorConditionFormula>IF( RecordType.Name =&apos;Software&apos;,
Cost_Per_License__c&lt;= 0 || ABS(Cost_Per_License__c) &lt;= 0
|| ISBLANK(Cost_Per_License__c) = True,null)</errorConditionFormula>
    <errorDisplayField>Cost_Per_License__c</errorDisplayField>
    <errorMessage>Please enter Cost per license value.</errorMessage>
</ValidationRule>