force-app/main/default/objects/Contract_Line_Item__c/validationRules/Cost_Per_Resource_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Cost_Per_Resource_Rule</fullName>
    <active>true</active>
    <description>Rule for cost per resource to be greater than 0</description>
    <errorConditionFormula>IF( RecordType.Name =&apos;Professional Services&apos;,
Cost_Per_Resource__c&lt;= 0 || ABS(Cost_Per_Resource__c) &lt;= 0
|| ISBLANK(Cost_Per_Resource__c) = True,null)</errorConditionFormula>
    <errorDisplayField>Cost_Per_Resource__c</errorDisplayField>
    <errorMessage>Please enter cost per resource value.</errorMessage>
</ValidationRule>