force-app/main/default/objects/Contract_Line_Item__c/validationRules/Total_Hardware_Assets.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Hardware_Assets</fullName>
    <active>true</active>
    <description>Total Hardware should be greater than 0</description>
    <errorConditionFormula>IF( RecordType.Name =&apos;Hardware&apos;,
Total_Assets__c   &lt;=   0 || ABS(Total_Assets__c) &lt;=  0 
|| ISBLANK(Total_Assets__c) = True,null)</errorConditionFormula>
    <errorDisplayField>Total_Assets__c</errorDisplayField>
    <errorMessage>Please enter Total Assets value.</errorMessage>
</ValidationRule>