force-app/main/default/objects/Contract_Line_Item__c/validationRules/Total_Resources.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Resources</fullName>
    <active>true</active>
    <description>Total Resources should be greater than 0.</description>
    <errorConditionFormula>IF( RecordType.Name =&apos;Professional Services&apos;, 
ABS(Total_Resources__c) &lt;=  0 
|| ISBLANK(Total_Resources__c) = True
, null)</errorConditionFormula>
    <errorDisplayField>Total_Resources__c</errorDisplayField>
    <errorMessage>Please enter Total Resources value.</errorMessage>
</ValidationRule>