force-app/main/default/objects/Contract_Line_Item__c/validationRules/Total_software_licenses.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_software_licenses</fullName>
    <active>true</active>
    <description>Total Software licenses should be greater than 0</description>
    <errorConditionFormula>IF( RecordType.Name =&apos;Software&apos;,
Total_Licenses__c  &lt;=   0 || ABS(Total_Licenses__c) &lt;=  0 
|| ISBLANK(Total_Licenses__c) = True,null)</errorConditionFormula>
    <errorDisplayField>Total_Licenses__c</errorDisplayField>
    <errorMessage>Please enter Total Licenses value.</errorMessage>
</ValidationRule>