force-app/main/default/objects/Contract_Line_Item__c/listViews/Hardware.listView-meta.xml
<ListView>
    <fullName>Hardware</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract_Line_Item__c.Hardware</value>
    </filters>
    <label>Hardware</label>
</ListView>