force-app/main/default/objects/Contract_Line_Item__c/listViews/Professional_Services.listView-meta.xml
<ListView>
    <fullName>Professional_Services</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract_Line_Item__c.Professional_Services</value>
    </filters>
    <label>Professional Services</label>
</ListView>