force-app/main/default/objects/Contract_Line_Item__c/listViews/Software.listView-meta.xml
<ListView>
    <fullName>Software</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract_Line_Item__c.Software</value>
    </filters>
    <label>Software</label>
</ListView>